<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ether &amp; SteamBoys Legacy</string>
    <string name="inicio_sesion">INICIO SESIÓN</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre">NOMBRE</string>
    <string name="nombre_usuario">NOMBRE USUARIO</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="nueva_contrasena">NUEVA CONTRASEÑA</string>
    <string name="contrasena_actual">CONTRASEÑA ACTUAL</string>
    <string name="correo">CORREO ELECTRÓNICO</string>
    <string name="registrar">REGISTRAR</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="personajes">PERSONAJES</string>
    <string name="objetos">OBJETOS</string>
    <string name="enemigos">ENEMIGOS</string>
    <string name="dados">DADOS</string>
    <string name="perfil">PERFIL</string>
    <string name="salir">SALIR</string>
    <string name="lanzar_dados">LANZAR DADOS</string>
    <string name="actualizar_datos">ACTUALIZAR DATOS</string>
    <string name="numero_caras">Número de caras</string>
    <string name="numero_dados">Número de dados</string>
    <string name="resultado">Resultado</string>
    <string name="simulador_dados">Simulador de dados</string>
    <string name="mi_perfil">MI PERFIL</string>
    <string name="home">HOME</string>
    <string name="volver_home">Volver al inicio</string>
    <string name="error_campos">Por favor, rellena todos los campos</string>
    <string name="error_conexion">Error de conexión con el servidor</string>
</resources>
